--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </ul>
 
         <details>
-          <summary>Design decisions (what interviewers ask)</summary>
+          <summary>Design decisions</summary>
           <ul>
             <li>Cutover strategy: staged migrations, dual-run validation, and rollback plans.</li>
             <li>Schema evolution: versioning, compatibility rules, and conversion patterns.</li>
@@ -433,7 +433,7 @@
         </ul>
 
         <details>
-          <summary>Interview-ready talking points</summary>
+          <summary></summary>
           <ul>
             <li>Choosing replication tech: Data Guard vs GoldenGate vs SharePlex (trade-offs and fit).</li>
             <li>Partitioning and query tuning strategies for mixed workloads.</li>
