--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <h1>Samar Bhattarai</h1>
         <p>Principal Data Engineering & Analytics Leader</p>
         <div class="hero-links">
-          <a href="mailto:samarbhattarai@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-          <a href="https://linkedin.com/in/sambhattarai" target="_blank" rel="noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          <a href="mailto:samar.bhattarai@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+          <a href="https://linkedin.com/in/samarbhattarai" target="_blank" rel="noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a href="#" title="Replace with a hosted PDF link"><i class="fas fa-file-pdf"></i> Download CV</a>
         </div>
       </div>
