--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <nav>
   <div class="container">
-    <a href="#impact">Impact</a>
+    <a href="#impact">Highlights</a>
     <a href="#modernization">Cloud Modernization</a>
     <a href="#observability">Observability (DART)</a>
     <a href="#ml">Predictive ML</a>
